load("@rules_cc//cc:defs.bzl", "cc_library")
load("@//.resources/rules:contrib/protobuf.bzl", "cc_proto_library")

cc_proto_library(
    name = "proto",
    srcs = glob(["*.proto"]),
)

cc_binary(
    name = "test",
    srcs = glob(["*.cc", "*.h"]),
    deps = [
        ":proto",
        "//ecm/abyss",
        "//ecm/config",
        "//ecm/containers",
        "//ecm/hdfs",
        "//ecm/log",
        "//ecm/metrics",
        "//ecm/server",
        "//ecm/taskflow:taskflow_loader",
        #"@sparsehash_c11//:dense_hash_map"
    ],
    visibility = ["//visibility:public"],
)
